# neatlib

./: .gitignore  Cargo.toml  README.md  build.rs
examples/cppn_test/: Cargo.toml
examples/cppn_test/src/: main.rs
examples/gpu_experiment/: Cargo.toml
examples/gpu_experiment/src/: main.rs  think.md
examples/gpu_experiment/src/gpu/: combined_network.rs  compute_network_invocations.wgsl  gpu.rs  mod.rs  node_feed_connections_index.rs
examples/locomotion_simulator/: .gitignore  Cargo.toml
examples/locomotion_simulator/src/: behaviour_analyser.rs  main.rs  simulation_renderer.rs
examples/locomotion_simulator/src/objects/: body.rs  body_sensors.rs  floor.rs  mod.rs  motor_positions.rs
examples/locomotion_simulator/src/plugins/: mod.rs
examples/locomotion_simulator/src/plugins/body_window/: body_window.rs  mod.rs
examples/locomotion_simulator/src/simulator/: mod.rs  object_definition.rs  simulation.rs
examples/mnist/: Cargo.toml  mnist.rs
examples/mnist/src/: data_loader.rs  main.rs  neural_model.rs  neural_model_gpu_runner.rs
examples/quad_tree/: Cargo.toml
examples/quad_tree/src/: main.rs
examples/rocket_simulator/: Cargo.toml
examples/rocket_simulator/src/: main.rs  simulation_renderer.rs
examples/rocket_simulator/src/objects/: floor.rs  mod.rs  rocket.rs  target.rs
examples/rocket_simulator/src/simulator/: mod.rs  object_definition.rs  object_engine_handle.rs  rapier_context.rs  simulation.rs
examples/sin/: sin.rs
examples/test_apps/event_sql_tests/: event_sql_tests.rs
examples/test_apps/renderer/: renderer.rs
examples/xor/: xor.rs
examples/xor_distributed/: xor_distributed.rs
src/: lib.rs
src/common/: activation_functions.rs  cpu_limiter.rs  mod.rs  network_definition.rs  network_definition_node_layer_resolver.rs  node_kind.rs  random.rs  types.rs
src/common/event_stream/: event.rs  event_recorder.rs  event_subscription.rs  mod.rs
src/common/event_stream/listeners/: console_listener.rs  listeners.rs  mod.rs  sql_listener.rs
src/cpu_phenome/: activation_mapper.rs  activations.rs  cpu_phenome.rs  mod.rs  phenome_layer.rs  phenome_layer_node.rs  tests.rs
src/distributed_compute/: distributed_agent.rs  distributed_config.rs  distributed_run.rs  distributed_work_server.rs  mod.rs  queues.rs
src/distributed_compute/models/: from_agent_work_result.rs  generation_data.rs  mod.rs  to_agent_work_item.rs  to_agent_work_item_batch.rs
src/hyperneat/: mod.rs
src/hyperneat/substrate/: cppn_inputs.rs  mod.rs  network_definition_factory.rs  substrate.rs  substrate_coordinate_scheme.rs  substrate_geometric_organization.rs  substrate_node.rs  substrate_node_id_indexer.rs  substrate_set.rs  substrate_set_connection_mode.rs  substrate_set_cppn_mode.rs  substrate_type.rs
src/neat/: mod.rs
src/neat/genetable/: connect_gene_table.rs  mod.rs  node_gene_index.rs
src/neat/genome/: genome.rs  mod.rs
src/neat/genome/neat/: connect_gene.rs  connect_genes.rs  mod.rs  mutation.rs  mutation_add_mode.rs  mutation_mode.rs  neat_genes.rs  neat_genome.rs  neat_genome_tests.rs  node_gene.rs  node_genes.rs
src/neat/population/: members_lookup.rs  mod.rs  reproduction.rs
src/neat/population/speciation/: genetically_engineered_member_maker.rs  mod.rs  speciation.rs  species.rs  species_member.rs  species_member_terminator.rs  species_metric.rs
src/neat/trainer/: configuration.rs  configuration_defaults.rs  mod.rs  neat_trainer.rs  neat_trainer_tests.rs  node_conf.rs  run_context.rs  seed_bank.rs
src/neat/trainer/activation_strategies/: activation_strategies.rs  cpu_distributed.rs  cpu_parallel.rs  mod.rs
src/neat/trainer/config_regulators/: available_regulation_signals.rs  config_regulator.rs  config_regulator_handler.rs  mod.rs  regulatable_configuration_properties.rs  simple_regulator.rs
src/neat/trainer/fitness/: fitness.rs  fitness_resolver.rs  fitness_setter.rs  mod.rs  novelty_component_store.rs  number_line.rs
src/neat/trainer/generation_stats/: generation_stats.rs  mod.rs
src/neat/trainer/neat_trainer_host/: from_host_events.rs  mod.rs  neat_trainer_host.rs  neat_trainer_host_state.rs  to_host_events.rs
src/neat/trainer/run_signals/: mod.rs  run_signals.rs
src/phenome/: activation_mapper.rs  mod.rs  node_index_lookup.rs  phenome.rs  phenome_layer_node_connection.rs  tests.rs
src/renderer/: mod.rs  renderer.rs
src/renderer/plugins/: mod.rs  rotating_sphere.rs
(+17 files in other folders)
