[workspace]
members = [
    "examples/rocket_simulator",
    "examples/locomotion_simulator",
    "examples/cppn_test",
    "examples/mnist"
]
resolver = "2"

[package]
name = "neatlib"
version = "0.1.0"
edition = "2021"

[dependencies.uuid]
version = "1.1.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "serde"
]

[features]
syntax_highlighting = ["syntect"]

[dependencies]
array_tool = "1.0.3"
log = "0.4.0"
rand = { version = "0.8.5", features = [ "small_rng" ] }
rand_distr = "0.4.3"
bitflags = "*"
"wasm-stopwatch" = "0.2.1"
rayon = "1.5.3"
hashbrown = { version = "0.14", features=["serde"]}
optick = { version = "1.3.1", default-features = false, features= [ "enable" ] } 
nohash-hasher = "0.2.0" 
serde_json = "1.0.81"
serde = { version = "1.0.137", features = ["derive"] }
strum = { version = "0.25.0", features = ["derive"] }
strum_macros = "0.25"
gluesql = "0.14"
lazy_static = "1.4.0"
itertools = "0.11.0"
proc-macro2 = "1.0.42"

#gpu compute
wgpu = "0.13.1"
futures = "0.3"

#renderer
bevy = "0.8"
bevy_egui = "0.16"
colorgrad = "0.6.1"
#bevy_text_mesh = "0.3.0" #temporarily disabled due to buggy behaviour
syntect = { version = "5", optional = true, default-features = false, features = [
    "default-fancy",
] }
enum-map = { version = "2", features = ["serde"] }
perf_monitor = "0.2.0"
url = "2.3.1"

#distibuted
tokio = { version = "1.19.2", features = ["macros", "net", "rt-multi-thread"] }
tarpc = { version = "0.33.0", features=["serde-transport-bincode", "serde-transport", "tcp", "tokio-serde"]}
gethostname = "0.4.1"
clap = {version= "4.1.4", features=["derive"]}

[[example]]
name = "xor"
path = "examples/xor/xor.rs"

[[example]]
name = "xor_distributed"
path = "examples/xor_distributed/xor_distributed.rs"

[[example]]
name = "sin"
path = "examples/sin/sin.rs"

[[example]]
name = "event_sql"
path = "examples/test_apps/event_sql_tests/event_sql_tests.rs"

[[example]]
name = "renderer"
path = "examples/test_apps/renderer/renderer.rs"