[package]
name = "gpu_experiment"
version = "0.1.0"
edition = "2021"

[[bin]]
path = "src/main.rs"
name = "gpu_experiment"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
neatlib = { path = "../../" }
wgpu = "0.13.1"
env_logger = "0.9"
futures = "0.3"
bytemuck = { version = "1.4", features = [ "derive" ] }
futures-intrusive = "0.4"
pollster = "0.2"
encase = "0.3.0"
rayon = "1.5.3"

[dependencies.uuid]
version = "1.1.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "serde"
]
