[package]
name = "mnist"
version = "0.1.0"
edition = "2021"

[[bin]]
path = "src/main.rs"
name = "mnist"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
neatlib = { path = "../../" }
serde_json = "1.0.81"
serde = { version = "1.0.137", features = ["derive"] }
bevy = {version = "0.8", features = ["jpeg"]}
bevy_rapier3d = {version= "0.18.0", features = ["dim3"]}
crossbeam-channel = "0.5"
[dependencies.uuid]
version = "1.1.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "serde"
]
